fix: date time parse and gen swagger docs
