# internal/api/docs/swagger.yaml
@@ -1407,6 +1407,10 @@ definitions:
         example: 1
         minimum: 1
         type: integer
+      cvc:
+        example: "343"
+        minLength: 3
+        type: string
       expiration:
         example: "2025-01-01"
         type: string
@@ -1423,16 +1427,13 @@ definitions:
       priority:
         example: 1
         type: integer
-      tokenize:
-        example: true
-        type: boolean
     required:
     - creditcardFlagId
     - creditcardTypeId
+    - cvc
     - expiration
     - name
     - number
-    - tokenize
     type: object
   creditcard_handler.CreateResponseDto:
     properties:
@@ -1519,7 +1520,7 @@ definitions:
       creditcardType:
         $ref: '#/definitions/creditcard_handler.CreditcardType'
       expiration:
-        example: "2025-01-01T00:00:00Z"
+        example: "2025-01-01"
         type: string
       name:
         example: Testing
