# internal/api/io/http/handler/creditcard_handler/dto.go
@@ -22,7 +22,7 @@ type GetAllUserCreditcardsResponseDto struct {
 	Uuid           uuid.UUID      `json:"uuid" example:"767c1587-1ade-4e6a-a9fe-f0e07c83bda9"`
 	Name           string         `json:"name" binding:"required" example:"Testing"`
 	Number         string         `json:"number" binding:"required,min=8" example:"4242********4242"`
-	Expiration     time.Time      `json:"expiration" binding:"required" example:"2025-01-01T00:00:00Z"`
+	Expiration     time.Time      `json:"expiration" binding:"required" example:"2025-01-01"`
 	UserID         int32          `json:"userId" example:"1"`
 	CreatedAt      time.Time      `json:"createdAt" example:"2024-01-01T00:00:00Z"`
 	CreditcardFlag CreditcardFlag `json:"creditcardFlag"`
@@ -30,14 +30,14 @@ type GetAllUserCreditcardsResponseDto struct {
 }
 
 type CreateRequestDto struct {
-	Name             string    `json:"name" binding:"required" example:"Testing"`
-	Number           string    `json:"number" binding:"required,min=8" example:"4242424242424242"`
-	Expiration       time.Time `json:"expiration" binding:"required" example:"2025-01-01"`
-	Priority         int32     `json:"priority" example:"1"`
-	NotifyExpiration bool      `json:"notifyExpiration" example:"true"`
-	CreditcardTypeID int32     `json:"creditcardTypeId" binding:"required,min=1" example:"1"`
-	CreditcardFlagID int32     `json:"creditcardFlagId" binding:"required,min=1" example:"1"`
-	CVC              string    `json:"cvc" binding:"required,min=3" example:"343"`
+	Name             string `json:"name" binding:"required" example:"Testing"`
+	Number           string `json:"number" binding:"required,min=8" example:"4242424242424242"`
+	Expiration       string `json:"expiration" binding:"required" example:"2025-01-01"`
+	Priority         int32  `json:"priority" example:"1"`
+	NotifyExpiration bool   `json:"notifyExpiration" example:"true"`
+	CreditcardTypeID int32  `json:"creditcardTypeId" binding:"required,min=1" example:"1"`
+	CreditcardFlagID int32  `json:"creditcardFlagId" binding:"required,min=1" example:"1"`
+	CVC              string `json:"cvc" binding:"required,min=3" example:"343"`
 }
 
 type CreateResponseDto struct {
